bigbluebutton-html5/imports/ui/newui_components/chat/styles.scss
@import "/imports/ui/stylesheets/mixins/focus";
@import "/imports/ui/stylesheets/variables/breakpoints";
@import "/imports/ui/stylesheets/variables/placeholders";
@import "/imports/ui/newui_components/css/variables.scss";

:root {
  --toast-content-width: 98%; 
  --toast-font-size: 80%;
  --toast-content-margin-sm: .4rem; 
  --toast-content-margin-md: 1.4rem;
}

@mixin lineClamp($lineHeight: 1em, $lineCount: 1) {
  position: relative;
  white-space: nowrap; 
  overflow: hidden;
  text-overflow: ellipsis;
  line-height: $lineHeight;
  max-height: calc(#{"$lineHeight * $lineCount"});
}

.chat {
  background-color: var(--color-white);
  padding:
    var(--md-padding-x)
    var(--md-padding-y)
    var(--md-padding-x)
    var(--md-padding-x);

  display: flex;
  flex-grow: 1;
  flex-direction: column;
  justify-content: space-around;
  overflow: hidden;
  height: 100%;

  :global(.browser-chrome) & {
    transform: translateZ(0);
  }
    
  @include mq($small-only) {
    transform: none !important;
  }
}

.header {
  position: relative;
  top: var(--poll-header-offset);
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
}

.title {
  @extend %text-elipsis;
  flex: 1;

  & > button, button:hover {
    max-width: var(--toast-content-width);
  }
}

.hideBtn {
  position: relative;
  background-color: var(--color-white);
  display: block;
  margin: var(--border-size-large);
  margin-bottom: var(--border-size);
  padding-left: 0;
  padding-right: inherit;
  z-index: 3;

  [dir="rtl"] & {
    padding-left: inherit;
    padding-right: 0;
  }

  > i {
      color: var(--color-gray-dark);
      font-size: smaller;

      [dir="rtl"] & {
        -webkit-transform: scale(-1, 1);
        -moz-transform: scale(-1, 1);
        -ms-transform: scale(-1, 1);
        -o-transform: scale(-1, 1);
        transform: scale(-1, 1);
      }
  }

  &:hover {
      background-color: var(--color-white);
  }
}

.link {
  text-decoration: none;
  background-color: inherit;
}

.pushMessageContent {
  margin-top: var(--toast-content-margin-md);
  margin-bottom: var(--toast-content-margin-sm);
  margin-left: var(--toast-content-margin-sm);
  margin-right: var(--toast-content-margin-sm);
  background-color: inherit;
  width: var(--toast-content-width);
}

.userNameMessage {
  margin: 0;
  font-size: var(--toast-font-size);
  color: var(--color-gray-dark);
  font-weight: bold;
  background-color: inherit;
  @include lineClamp(1em, 1);
}

.contentMessage {
  margin-top: var(--border-radius);
  font-size: var(--toast-font-size);
  background-color: inherit;
  @include lineClamp(var(--font-size-small), 10);
}

.ChatHeading{
  font-family: $fontPrimary;
  font-style: normal;
  font-weight: 500 !important;
  font-size: 1.17em;
  line-height: 20px;  
  display:flex;
  align-items: center;
}
.ChatHeadingOuter{
  padding: 4px 8px;
  // padding-left: 1rem;
  // position: fixed;
  width: 350px;
  // background: rgba(255, 255, 255, 0.2);
  // backdrop-filter: blur(35px);
  z-index:999;
  display: flex;
  justify-content: space-between;
}
.CustomInline{
  display: flex;
  // justify-content: space-between;
}

.chatWidth { 
  width: 350px;
}
.shareUrlIcon{
  height: 44px;
  width: 44px;
  background: #FFFFFF;
  border-radius: 8px;
  display: flex;
  align-items: center;
  justify-content: center;
  margin-left: var(--bars-padding);
  cursor: pointer;
  position: relative;
}

.sidebarTooltip{
  height: 23px;
  position: absolute;
  background-color: $tooltipBgColor;
  color: $tooltipColor;
  top: 8px;
  left: 45px;
  border-radius: 100px;
  padding: 5px 8px;
  display: flex;
  align-items: center;
  justify-content: center;
  transition: all 0.2s ease;
  z-index: 999;
}
.sidebarTipArrow{
  height: 8px;
  width: 20px;
  background-color: $tooltipBgColor;
  border-radius: 100%;
  position: absolute;
  left: 40px;
  top: 15px;
  z-index: 999;
}
.sidebarTooltip p {
  font-family: $fontPrimary;
  font-style: normal;
  font-weight: 500;
  font-size: 13px;
  line-height: 26px;
  color: rgba(255, 255, 255, 0.9);
  white-space: nowrap;
}

.shareUrlIcon .sideTooltipWrapper {
  opacity: 0;
  z-index: 999;
  transition: 0.3s all ease-in-out;
  pointer-events: none;
}

.shareUrlIcon:hover .sideTooltipWrapper {
  opacity: 1;
}

.cutButton {
  display: flex;
  align-items: center;
  justify-content: center;
  margin-right: 1rem;
  border-radius: 50%;
  background-color: white;
  width: 28px;
  height: 28px;
}
.cutButton button{
  border: none;
  outline: none;
  background: none;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: center;
}

.chatHeader {
  // height: auto;
  margin: var(--bars-padding);
  display: flex;
  align-items: center;
  height: 44px;
}
.chatHeaderWrapper{
  width: calc(350px - 68px);
  background-color: #FFFFFF;
  border-radius: 6px;
  padding: 5px;
  display: flex;
  font-family: $fontPrimary;
  font-style: normal;
  font-size: 12px;
  line-height: 20px;
  letter-spacing: -0.24px;
  cursor: pointer;
  
  .chTab {
    border-radius: 6px;
    padding: 6px;
    flex: 1;
    display: flex;
    align-items: center;
    justify-content: center;

    h3{
      margin: 0;
      padding: 0;
      font-weight: 600 !important;
    }
    span{
      width: 20px;
      height: 20px;
      text-align: center;
      margin-left: 5px;
      color: #FFFFFF;
      border-radius: 50%;
      background-color: #E64980;
    }
  }
  .chTabOn{
    color: #FFFFFF;
    background-color: $sidebarIconDark;
  }

  .chTabOff{
    color: #000000;
  }
}

.messageList {
  // height: calc(100vh - 168.72px);
  height: auto;
}
// .messageList1 {
//   height: calc(100vh - 96.72px);
// }

